--- a/part05_springcloud_config-parent/config-server/src/main/resources/application.yml
+++ b/part05_springcloud_config-parent/config-server/src/main/resources/application.yml
@@ -1,10 +1,6 @@
 server:
   port: 9527
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
 
 spring:
   application:
@@ -16,3 +12,24 @@ spring:
         git:         # git 的 远程仓库地址
           uri: https://gitee.com/kylesun96/config.git
       label: master  # 分支配置
+
+  # 配置rabbitmq信息
+  rabbitmq:
+    host: 192.168.200.129
+    port: 5672
+    username: guest
+    password: guest
+    virtual-host: /
+
+# 将自己注册到eureka中
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
+# 暴露bus的刷新端点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: 'bus-refresh'
