--- a/part08_springcloud_practice/business-goods/src/main/resources/application.yml
+++ b/part08_springcloud_practice/business-goods/src/main/resources/application.yml
@@ -18,3 +18,10 @@ spring:
 
   application:
     name: business-goods # 设置当前应用的名称。将来会在eureka中Application显示。将来需要使用该名称来获取路径
+
+  rabbitmq:
+    host: 192.168.200.129
+    port: 5672
+    virtual-host: /
+    username: guest
+    password: guest
