基于 Spring Boot 搭建商品搜索服务和 RabbitMQ 消息服务

--- a/part08_springcloud_practice/pom.xml
+++ b/part08_springcloud_practice/pom.xml
@@ -13,6 +13,7 @@
         <module>business-goods</module>
         <module>business-eureka-server</module>
         <module>business-common</module>
+        <module>business-elasticsearch</module>
     </modules>
 
     <!--spring Boot 环境 -->
