网关的配置及BUS全局刷新

--- a/part08_springcloud_practice/pom.xml
+++ b/part08_springcloud_practice/pom.xml
@@ -15,6 +15,7 @@
         <module>business-common</module>
         <module>business-elasticsearch</module>
         <module>business-gateway</module>
+        <module>business-config</module>
     </modules>
 
     <!--spring Boot 环境 -->
