--- a/part08_springcloud_practice/business-goods/pom.xml
+++ b/part08_springcloud_practice/business-goods/pom.xml
@@ -64,6 +64,12 @@
             <version>1.2.68</version>
         </dependency>
 
+        <!--config client -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
